--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,17 @@ version: "3.9"
 services:
   app:
     build:
-      context:  .
+      context: .
       args:
         - DEV=true
     ports:
       - "8000:8000"
     volumes:
       - ./app:/app
-    command:
-      sh -c "python manage.py runserver 0.0.0.0:8000"
+    command: >
+      sh -c "python manage.py wait_for_db && 
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
       - DB_NAME=devdb
@@ -26,10 +28,8 @@ services:
       - dev-db-data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=devdb
-      - POSGRES_USER=devuser
+      - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
-
-
 
 volumes:
   dev-db-data:
